[package]
name = "stan"
version = "0.0.11"
authors = ["Jell <jean-louis@reify.se>"]
edition = "2018"
license = "Apache-2.0"
description = "NATS Streaming client based on official NATS rust client"
documentation = "https://docs.rs/stan"
repository = "https://github.com/ReifyAB/stan-rs"
homepage = "https://github.com/ReifyAB/stan-rs"

[dependencies]
bytes = "1.0.1"
prost = "0.7.0"
nats = "0.9.7"
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
version-sync = "0.9.2"
cargo-readme = "3.2.0"

[build-dependencies]
prost-build = { version = "0.7.0" }
